alignment of board and buttons fixed, generating unique types of cards at a time, new sound and score classes added

--- a/style.css
+++ b/style.css
@@ -11,43 +11,50 @@ body{
   background-position: center;
 } 
 
-/* body{
-  background-color: lightgray;
-
-} */
-
 canvas {
   /* background-color: white; */
   background: transparent;
-	position: absolute; 
-	/* width: 600px;   */
-  /* height: 400px;  */
-	left: 50%; 
-	top: 50%; 
-  margin-left: -250px; 
-    /*This is half the width  */
-  margin-top: -250px;   
-    /*This is half the height */
+
 }
-#start-game button{
-  /* position: fixed;  */
+.buttons{
+  padding: 0 20px;
+}
+.buttons button{
+  display: flex;
+  /* position: fixed;   */
+  justify-content: space-between; 
   font-family: monospace;
   font-size: 40px;
-  background-color: black;
+  /* background-color: black; */
   color: #fff;
   padding: 20px 40px;
   border: 0;
   box-shadow: 0;
-  border-radius: 5px;
+  border-radius: 30px;
   margin-bottom: 20px;
+  outline: 0;
+  box-shadow: none!important;
 
-  left: 50%; 
+  /* left: 50%; 
 	top: 50%; 
   margin-left: 250px; 
-  margin-top: 65px;  
+  margin-top: 65px;   */
 }
-
-#start-game button:hover{
-  /* color: red; */
+#start-game{
+  background-color: black;
+}
+#start-game:hover{
   background-color: #7BCCB5;
+  /* background: var(--color-foreground-text-sub); */
+}
+.scorebtn{
+  background-color: #7BCCB5;
+  /* color:#7BCCB5; */
+}
+.all{
+  display: flex;
+  justify-content: flex-start;
+  justify-content: center;
+  margin-top: 80px;
+  margin-right: 100px;
 }
